TSH-BACK/Front/setup_connexion_frontend_and_backend_via_proxy_vite - Update CORS to authorize client app request after deploy